--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.4.6",
+        "browser-sync": "^2.27.10",
+        "browser-sync-webpack-plugin": "^2.3.0",
         "tailwindcss": "^3.0.18"
     },
     "devDependencies": {
-        "browser-sync": "^2.27.10",
-        "browser-sync-webpack-plugin": "^2.3.0"
+        
     }
 }
