--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "fakerphp/faker": "^1.9.1"
     },
     "require-dev": {
+        "laracasts/generators": "^2.0",
         "laravel/breeze": "^1.9",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
